# subsetix_kokkos_2

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
.reuse/: dep5
benchmarks/: CMakeLists.txt  benchmark_main.cpp  example_benchmark.cpp  intersection_benchmark.cpp
include/subsetix/: config.hpp  intersection.hpp  mesh.hpp
include/subsetix/detail/: utils.hpp
include/subsetix/intersection/: v1.hpp
src/: CMakeLists.txt
tests/: .clang-tidy  CMakeLists.txt  example_test.cpp  intersection_test.cpp  test_main.cpp
tests/test_utils/: test_helpers.hpp
